--- a/index.html
+++ b/index.html
@@ -1,2 +1,24 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> hi </title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            1
+          </li>
+          <li>
+            2
+          </li>
+        </ul>
+      </nav>
+      <h3>
+        Site Name
+      </h3>
+    </header>
+  </body>
+</html>
